# fathom

./: .gitignore  Dockerfile  README.md  alembic.ini  config.example.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2da528f6c8b3_add_indexers_table.py  3695c15c7688_add_parsed_releases_table.py  a3f8e2b91c05_add_preferred_source_to_quality_profiles.py  dc5deea1b1e3_add_activity_log_table.py  dcf91e11d00f_add_media_and_quality_profile_tables.py  f8a53c13760a_add_download_client_and_record_tables.py
src/fathom/: __init__.py  __main__.py  app.py  config.py  database.py
src/fathom/api/: download.py  indexer.py  media.py  quality.py  router.py  search.py  system.py
src/fathom/downloaders/: __init__.py  base.py  qbittorrent.py  sabnzbd.py  transmission.py
src/fathom/indexers/: newznab.py  torznab.py
src/fathom/llm/: cache.py  client.py  matcher.py  parser.py  prompts.py
src/fathom/models/: __init__.py  activity.py  base.py  download.py  indexer.py  media.py  quality.py  release.py
src/fathom/scheduler/: import_check.py  rss_sync.py  search_missing.py  setup.py
src/fathom/schemas/: quality.py  search.py
src/fathom/services/: activity_service.py  import_service.py  notification_service.py
src/fathom/templates/: base.html  dashboard.html  movies.html  queue.html  (+3 more)
src/sodar/: __init__.py  __main__.py  app.py  config.py  database.py
tests/: conftest.py  test_download_api.py  test_fallback.py  test_indexer_api.py  test_media_api.py  test_parser.py  test_phase7.py  test_quality_matcher.py  test_regex_vs_llm.py  test_scheduler.py
(+52 files in other folders)
